Java 1.8 version change